--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <h1>Thank you for choosing Johnstone Supply Monroe</h1>
+Please contact us at Johnstone Monroe 704-283-2102<br>
+<button type="button" name="button"><a href="http://www.johnstonesupply.com">Johnstone Supply Web Store</a></button>
 
 <ul class="categories">
   <li><a href="http://www.johnstonesupply.com">Johnstone Supply Web Store</a></li>
   <li><a href="http://bit.ly/JohnstoneRSVP">Customer Appreciation Dinner RSVP</a></li>
 </ul>
-
-<h2>Please contact us at Johnstone Monroe 704-283-2102</h2>
