fixed contact line

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>Thank you for choosing Johnstone Supply Monroe</h1>
-Please contact us at Johnstone Monroe 704-283-2102<br>
+If you have any problems please contact us at Johnstone Monroe 704-283-2102<br>
 <button type="button" name="button"><a href="http://www.johnstonesupply.com">Johnstone Supply Web Store</a></button>
 
 <ul class="categories">
